Update to JAOPCA 2.3